# llm-extraction-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  LICENSE  Makefile  PORTFOLIO_ONE_PAGER.md  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  models.yaml  pyproject.toml
contracts/: README.md  pyproject.toml
contracts/src/llm_contracts/: schema.py
contracts/src/llm_contracts/config/: models_config.py
contracts/src/llm_contracts/runtime/: eval_result_row.py  eval_run_summary.py  generate_slo.py  policy_decision.py
contracts/tests/: conftest.py  test_contracts_scaffold.py  test_models_config_unit.py  test_runtime_edge_branches_unit.py  test_runtime_eval_artifacts_unit.py  test_runtime_generate_slo_unit.py  test_runtime_policy_decision_unit.py  test_schema_unit.py
eval/: Dockerfile.eval  README.md  pyproject.toml
eval/src/llm_eval/: cli.py  config.py  rendering.py
eval/src/llm_eval/client/: http_client.py
eval/src/llm_eval/datasets/: voxel51_scanned_receipts.py
eval/src/llm_eval/io/: run_artifacts.py  run_pointers.py
eval/src/llm_eval/metrics/: common.py  extraction_scoring.py
eval/src/llm_eval/reports/: writer.py
eval/src/llm_eval/runners/: base.py  extraction_runner.py
eval/tests/: conftest.py
eval/tests/fakes/: fake_examples.py  fake_http_client.py
eval/tests/integration/: conftest.py  helpers.py  test_extract_sroie_receipt_v1.py  test_job_contract_integration.py  test_job_extract_success_live.py
eval/tests/unit/cli/: test_cli_branches.py  test_cli_contract.py  test_cli_debug_print_does_not_crash.py  test_cli_disabled_task.py  test_cli_list_tasks.py  test_cli_persistence.py  test_cli_persistence_edges.py  test_cli_reports_persistence.py
eval/tests/unit/client/: test_http_client.py  test_http_client_branches.py  test_http_client_protocol_types.py
eval/tests/unit/config/: test_config.py
eval/tests/unit/datasets/: test_voxel51_scanned_receipts.py
eval/tests/unit/io/: test_run_artifacts.py  test_run_pointers.py
eval/tests/unit/reports/: test_report_writer_contract.py  test_report_writer_examples_and_edges.py  test_report_writer_md_determinism.py
eval/tests/unit/runners/: test_base_deps.py  test_base_modelz_branches.py  test_extraction_sampling.py  test_runner_contracts.py  test_runner_empty_dataset.py  test_runner_error_rows.py  test_runner_http_calls.py  test_runner_metrics_sanity.py  test_runner_patchability.py
server/: README.md  alembic.ini  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 3bf8c0c75291_models_sync_after_cached_default_fixes.py  6c4e2b1f9a7d_add_trace_and_job_ids_to_inference_logs.py  8acc77092594_sync_schema_after_refactor.py  9f0f3f2b5c21_add_extract_jobs_table.py  a91b7c3d4e5f_add_otel_parent_context_to_extract_jobs.py  c7a9d2f4e8b1_add_trace_id_to_extract_jobs.py  f1d2e3c4b5a6_add_request_trace_events_table.py
server/src/llm_server/: cli.py  main.py
server/src/llm_server/api/: admin.py  admin_rendering.py  deps.py  extract.py  generate.py  health.py  models.py
server/src/llm_server/application/: __init__.py  poll_extract_job.py  process_extract_job.py  run_extract.py  submit_extract_job.py
server/src/llm_server/core/: __init__.py  cache_keys.py  config.py  errors.py  health_checks.py  limits.py  logging.py  metrics.py  model_load_mode.py  models_config.py  redis.py  request_settings.py  schema_registry.py  time.py  tracing.py  validation.py
server/src/llm_server/db/: models.py  session.py
server/src/llm_server/domain/: __init__.py  jobs.py  outcomes.py  runs.py
server/src/llm_server/io/: policy_decisions.py  runtime_generate_slo.py
server/src/llm_server/observability/: __init__.py  regression_manifests.py  replay_cases.py
server/src/llm_server/reports/: writer.py
server/src/llm_server/runtime/: __init__.py  assessment.py  capabilities.py  external_probes.py  generation.py  model_listing.py  model_loading.py  policy.py  (+5 more)
server/tests/: conftest.py  fakes.py
server/tests/integration/: conftest.py  test_admin_load_model_multimodel_integration.py  test_admin_policy_endpoints_integration.py  test_auth_integration.py  test_capability_enforcement_endpoints_integration.py  test_concurrency_integration.py  test_extract_integration.py  test_extract_jobs_integration.py  test_extract_model_autoselection_integration.py  test_extract_repair_integration.py  test_generate_batch_integration.py  test_generate_cache_integration.py  test_generate_integration.py  test_health_integration.py  test_model_load_mode_integration.py  test_models_endpoint_capabilities_integration.py  test_models_yaml_extract_gate_integration.py  test_policy_enforcement_integration.py  test_quota_exhaustion_integration.py  test_readyz_modelz_policy_integration.py  test_regressions_integration.py  test_reports_endpoints_integration.py  test_schema_registry_integration.py  test_schemas_detail_integration.py  test_trace_inspection_integration.py
server/tests/unit/: conftest.py  test_admin_models_ops_unit.py  test_admin_reload_ops_unit.py  test_api_extract_jobs_unit.py  test_api_extract_unit.py  test_api_generate_unit.py  test_api_health_unit.py  test_api_resolve_model_unit.py  test_application_extract_jobs_unit.py  test_application_run_extract_unit.py  test_assessed_gate_unit.py  test_backend_api_unit.py  test_cli_unit.py  test_core_limits_unit.py  test_core_redis_unit.py  test_core_tracing_unit.py  test_deps_capabilities_unit.py  test_deps_limits_unit.py  test_domain_runs_unit.py  test_early_reject_middleware_unit.py  test_errors_unit.py  test_external_probes_unit.py  test_extract_jobs_worker_unit.py  test_extract_parsing_unit.py  test_generate_gating_unit.py  test_generate_runner_unit.py  test_health_infra_unit.py  test_health_snapshots_unit.py  test_inference_unit.py  test_limits_config_unit.py  test_llamacpp_backend_unit.py  test_llm_build_unit.py  test_llm_config_helpers_unit.py  test_llm_loader_unit.py  test_llm_registry_unit.py  test_logging_unit.py  test_main_unit.py  test_models_listing_unit.py  test_models_status_unit.py  test_policy_decisions_unit.py  (+13 more)
(+520 files in other folders)
