[project]
name = "llm_server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
  "transformers>=4.55",
  "accelerate>=1.0.0",
  "python-dotenv>=1.0.0",
  "safetensors>=0.4.0",
  "pydantic-settings>=2.0",
  "prometheus-client>=0.20",
  "orjson>=3.9.15",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.0",
  "alembic>=1.16.4",
  "asyncpg>=0.29",
  "redis>=5.0",
  "httpx>=0.27",
]

# Convenience entry point: `uv run serve`
[project.scripts]
serve = "app.cli:serve"

[project.optional-dependencies]
# Choose ONE of these at sync time:
mps = [
  "torch>=2.4",
  "torchvision>=0.19",
  "torchaudio>=2.4",
]
cpu = [
  "torch>=2.4",
  "torchvision>=0.19",
  "torchaudio>=2.4",
]
cuda121 = [
  "torch>=2.4",
  "torchvision>=0.19",
  "torchaudio>=2.4",
]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "asgi-lifespan>=2.1",
  "pytest-cov>=5",
  "coverage>=7",
]
lint = [
  "ruff>=0.5",
  "black>=24",
]

# ---------- uv configuration ----------

# Map torch packages to the correct PyTorch indexes by extra
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "mps"     },
  { index = "pytorch-cpu",   extra = "cpu"     },
  { index = "pytorch-cu121", extra = "cuda121" },
]
torchvision = [
  { index = "pytorch-cpu",   extra = "mps"     },
  { index = "pytorch-cpu",   extra = "cpu"     },
  { index = "pytorch-cu121", extra = "cuda121" },
]
torchaudio = [
  { index = "pytorch-cpu",   extra = "mps"     },
  { index = "pytorch-cpu",   extra = "cpu"     },
  { index = "pytorch-cu121", extra = "cuda121" },
]

# Single uv table (merge everything here)
[tool.uv]
package = true
conflicts = [
  [ { extra = "mps" },   { extra = "cpu" } ],
  [ { extra = "mps" },   { extra = "cuda121" } ],
  [ { extra = "cpu" },   { extra = "cuda121" } ],
]

# Named indexes for PyTorch wheels
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*", "tests*", "notebooks*"]
