# pyproject.toml (repo)
[project]
name = "llm_platform"
version = "0.1.0"
description = "Repo-level CLI and workflows for llm-extraction-platform"
requires-python = "==3.12.*"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0.0",

  # Local subprojects (these names must match each subproject's [project].name)
  "llm_server",
  "llm_eval",
  "llm_policy",

  # Shared contracts (fixes the file:../contracts relative-path issue)
  "llm-contracts",
]

[project.scripts]
llmctl = "cli.main:main"

# Re-expose subpackage CLIs
llm = "llm_server.cli:main"
eval = "llm_eval.cli:main"
llm-policy = "llm_policy.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "black>=24",
]

[tool.uv]
package = true

# ✅ map dependency-name -> local path (workspace-style)
# NOTE: the keys here must match the *dependency names* you use above.
[tool.uv.sources]
llm_server    = { path = "server", editable = true }
llm_eval      = { path = "eval", editable = true }
llm_policy    = { path = "policy", editable = true }
llm-contracts = { path = "contracts", editable = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
exclude = [
  "server*",
  "eval*",
  "policy*",
  "contracts*",
  "tools*",
  "deploy*",
  "integrations*",
  "ui*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.black]
line-length = 100
target-version = ["py312"]