# contracts/pyproject.toml
[project]
name = "llm-contracts"
version = "0.1.0"
description = "Shared schema bindings for internal artifacts (policy_out, eval_out, etc.)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
  "jsonschema>=4.21,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------
# Hatchling configuration
# -------------------------

[tool.hatch.build.targets.wheel]
# Ensure the wheel contains the package (and all subpackages like runtime/)
packages = ["llm_contracts"]

# src/ layout mapping: force the src directory into the installed package
[tool.hatch.build.targets.wheel.force-include]
"src/llm_contracts" = "llm_contracts"

# (Optional but nice) make sdists include the source package too
[tool.hatch.build.targets.sdist]
include = ["src/llm_contracts/**", "pyproject.toml", "README*"]